--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="timeline-dot">.</div>
           <div class="timeline-date">2021</div>
           <div class="timeline-content">
-            <h3>Intermedate</h3>
+            <h3>Intermediate</h3>
             <p>
               I completed my intermediate education in Science (MPC) from
               Narayana Jr College, Visakhapatnam, under the BIEAP board.
